compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__strings__const_concat.snap
---
source: compiler-core/src/javascript/tests/strings.rs
expression: "\nconst cute = \"cute\"\nconst cute_bee = cute ++ \"bee\"\n\npub fn main() {\n  cute_bee\n}\n"
---
----- SOURCE CODE

const cute = "cute"
const cute_bee = cute ++ "bee"

pub fn main() {
  cute_bee
}


----- COMPILED JAVASCRIPT
const cute = "cute";

const cute_bee = cute + "bee";

export function main() {
  return cute_bee;
}
