compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__strings__const_concat_multiple.snap
---
source: compiler-core/src/javascript/tests/strings.rs
assertion_line: 244
expression: "\nconst cute = \"cute\"\nconst cute_bee = cute ++ \"bee\"\nconst cute_cute_bee_buzz = cute ++ cute_bee ++ \"buzz\"\n\npub fn main() {\n  cute_cute_bee_buzz\n}\n"
---
----- SOURCE CODE

const cute = "cute"
const cute_bee = cute ++ "bee"
const cute_cute_bee_buzz = cute ++ cute_bee ++ "buzz"

pub fn main() {
  cute_cute_bee_buzz
}


----- COMPILED JAVASCRIPT
const cute = "cute";

const cute_bee = cute + "bee";

const cute_cute_bee_buzz = cute + cute_bee + "buzz";

export function main() {
  return cute_cute_bee_buzz;
}
