compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__strings__equality.snap
---
source: compiler-core/src/javascript/tests/strings.rs
assertion_line: 71
expression: "\nfn go(a) {\n  a == \"ok\"\n  a != \"ok\"\n  a == a\n}\n"
---
----- SOURCE CODE

fn go(a) {
  a == "ok"
  a != "ok"
  a == a
}


----- COMPILED JAVASCRIPT
function go(a) {
  a === "ok";
  a !== "ok";
  return a === a;
}
