compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__strings__string_concat.snap
---
source: compiler-core/src/javascript/tests/strings.rs
expression: "\nfn go() {\n  \"Hello, \" ++ \"Joe\"\n}\n"
---
function go() {
  return "Hello, " + "Joe";
}
