compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__strings__string_literals.snap
---
source: compiler-core/src/javascript/tests/strings.rs
expression: "\nfn go() {\n  \"Hello, Rakun!\"\n}\n"
---
----- SOURCE CODE

fn go() {
  "Hello, Rakun!"
}


----- COMPILED JAVASCRIPT
function go() {
  return "Hello, Rakun!";
}
